Fixed spacing on HTML list, added additional contnet to CSS State

--- a/screen.css
+++ b/screen.css
@@ -155,6 +155,7 @@ img {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 2.0348837%;
+    grid-column-gap: 35px;
   }
   .cssgrid #primary {
     grid-column: 1 / 2;
@@ -166,5 +167,10 @@ img {
     clear: both;
     float: none;
   }
-
+@media screen and (min-width: 1185px) {
+  body {
+    padding-right: 20%;
+    padding-left: 20%;
+  }
+}
 }
